--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,19 +23,19 @@ repos:
     hooks:
       - id: isort
 
-  # - repo: https://github.com/pylint-dev/pylint
-  #   rev: v3.0.1
-  #   hooks:
-  #     - id: pylint
-  #       args: ["--rcfile=pyproject.toml"]
-  #       additional_dependencies: []
+  - repo: https://github.com/pylint-dev/pylint
+    rev: v3.0.1
+    hooks:
+      - id: pylint
+        args: ["--rcfile=pyproject.toml"]
+        additional_dependencies: []
 
-  # - repo: https://github.com/PyCQA/bandit
-  #   rev: 1.7.5
-  #   hooks:
-  #     - id: bandit
-  #       args: ["-r", "."]
-  #       exclude: "./generate_docs.py"
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.5
+    hooks:
+      - id: bandit
+        args: ["-r", "."]
+        exclude: "./generate_docs.py"
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
     rev: v1.3.2
